test/arrays/diten/forallArrayTypeVar.good
forallArrayTypeVar.chpl:1: error: illegal assignment of value to type
